Read class bytes from resource stream
Use `NuclrResource.openInputStream()` when decompiling classes instead of reading from the resource path. This fixes quick view for class files stored in archives or remote locations where no local filesystem path is available.